added-> final notebooks

--- a/final/vessel3d_.ipynb
+++ b/final/vessel3d_.ipynb
@@ -191,6 +191,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Augmentation and Oversampling\n",
+        "Address class imbalance by augmenting minority class samples (aneurysm cases). The `augment_3d` function applies random 3D transformations including rotations, flips, shifts, and Gaussian noise. Target a 2:1 ratio (majority:minority) rather than 1:1 to prevent overfitting on augmented samples."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -274,6 +282,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Preprocessing\n",
+        "Transpose the data from channels-first (NCDHW) to channels-last (NDHWC) format as required by TensorFlow. Convert all arrays to float32 for efficient computation. Verify the final data shape and value range."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -305,6 +321,19 @@
         "\n",
         "print(f\"Train shape: {trainx.shape}\")\n",
         "print(f\"Data range: [{trainx.min():.3f}, {trainx.max():.3f}]\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Build the 3D CNN Model Architecture\n",
+        "Define an improved 3D ResNet-style architecture with Squeeze-and-Excitation (SE) attention blocks. The model features:\n",
+        "- Three residual blocks with increasing filter sizes (32 → 64 → 128)\n",
+        "- SE attention for channel-wise feature recalibration\n",
+        "- Spatial dropout for regularization\n",
+        "- Global average pooling followed by dense layers with L2 regularization\n",
+        "- Sigmoid output for binary classification"
       ]
     },
     {
@@ -820,6 +849,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Focal Loss Function\n",
+        "Implement focal loss to handle class imbalance. Focal loss down-weights easy examples and focuses training on hard negatives. Parameters:\n",
+        "- `gamma`: Focusing parameter that reduces loss for well-classified examples\n",
+        "- `alpha`: Weighting factor for the minority class (aneurysm)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -847,6 +886,14 @@
         "\n",
         "        return K.mean(alpha_weight * focal_weight * ce)\n",
         "    return loss"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##  Learning Rate Schedule\n",
+        "Implement cosine annealing with warm restarts as a learning rate scheduler. This schedule gradually decreases the learning rate following a cosine curve, then resets to allow the model to escape local minima and explore new regions of the loss landscape."
       ]
     },
     {
@@ -901,6 +948,18 @@
         "        keras.metrics.Recall(name='recall'),\n",
         "    ]\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Configure Training Callbacks\n",
+        "Set up callbacks for training optimization:\n",
+        "- Early stopping based on validation AUC with patience of 25 epochs\n",
+        "- Model checkpointing to save the best model\n",
+        "- Cosine annealing learning rate schedule\n",
+        "- ReduceLROnPlateau as a backup learning rate reducer"
       ]
     },
     {
@@ -1357,6 +1416,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Test-Time Augmentation (TTA)\n",
+        "Implement TTA to improve prediction robustness. For each test sample, generate multiple augmented versions (flips along each axis), make predictions on all versions, and average the results. This reduces prediction variance and often improves performance."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1595,6 +1662,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ensemble Learning - Train Multiple Models\n",
+        "Train an ensemble of 5 models with different random seeds to reduce variance and improve generalization. Each model uses:\n",
+        "- Modified focal loss with higher alpha (0.7) for stronger minority class emphasis\n",
+        "- Boosted class weights (1.5× for minority class)\n",
+        "- Same architecture but different weight initialization\n",
+        "\n",
+        "Ensemble predictions are computed by averaging the outputs of all models."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1772,6 +1852,18 @@
         "ens_f1 = 2 * ens_precision * ens_recall / (ens_precision + ens_recall) if (ens_precision + ens_recall) > 0 else 0\n",
         "\n",
         "print(f\"{'Ensemble (t=0.35)':<25} {roc_auc_ensemble:>8.4f} {ens_recall:>16.2%} {ens_f1:>12.2f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Optimize Ensemble Threshold and Evaluate\n",
+        "Find the optimal classification threshold for the ensemble predictions and generate final evaluation metrics. Display:\n",
+        "- Precision, recall, and F1-score at each threshold tested\n",
+        "- Best threshold selection based on F1-score\n",
+        "- Final ROC-AUC and classification report\n",
+        "- Confusion matrix visualization showing prediction distribution"
       ]
     },
     {
